--- a/style.css
+++ b/style.css
@@ -88,21 +88,22 @@ aside>h3 {
   font-size: 24px;
   letter-spacing:7px;
 }
-/*
-footer {
-  border: solid white;
-  padding-left: 10px;
-  padding-bottom: 5px;
-  margin-top: 10px;
-  background-color: #999999;
-  color: black;
-  height: 15%;
+
+
+
+/* CSS for the table elements */
+
+table {
+	border: 10px solid black;
 }
 
-footer > h4 {
-  padding-top: 0px;
+td {
+	padding: 10px;
+	border-radius: 15px;
+  border: 1px solid black;
 }
 
-footer > ul > li {
-  font-size: 12px;
-}*/
+th {
+	background-color: navy;
+	color: white;
+}
