--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
 body, html {
   height: 100%;
   color: white;
-  /*display: inline-block;*/
 }
 
 li {
@@ -65,6 +64,11 @@ aside>p {
   font-size: 9px;
 }
 
+aside>ul>p {
+  font-size: 12px;
+  text-align: left;
+}
+
 aside>h3 {
   text-align: center;
 }
@@ -88,8 +92,6 @@ aside>h3 {
   font-size: 24px;
   letter-spacing:7px;
 }
-
-
 
 /* CSS for the table elements */
 
